--- a/First.html
+++ b/First.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Title</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is my First paragraph.</p>
-<p>This is my Third paragraph.</p>
+<h1>Heading</h1>
+<p>This is paragraph.</p>
 
 </body>
 </html>
