New file JavaScript Change
Description for New file JavaScript Change

--- a/First.html
+++ b/First.html
@@ -8,11 +8,11 @@
 
 <script>
 function displayDate() {
-    document.getElementById("demo").innerHTML = Date();
+    document.getElementById("demo1").innerHTML = Date();
 }
 </script>
 
-<p id="demo"></p>
+<p id="demo1"></p>
 
 </body>
 </html> 
